--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,18 @@
         android:maxSdkVersion="30" />
     <uses-permission
         android:name="android.permission.BLUETOOTH_ADMIN"
-        android:maxSdkVersion="30" /> <!-- New BT permissions -->
+        android:maxSdkVersion="30" />
+
+    <!-- New BT permissions -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- App must only run on devices that have a bluetooth radio -->
+    <uses-feature android:name="android.hardware.bluetooth" android:required="true" />
 
     <application
         android:name=".App"
@@ -55,6 +60,8 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <service android:name=".SerialService" />
+        <receiver android:name=".receivers.BluetoothStateReceiver" android:exported="false" />
+        <receiver android:name=".receivers.BluetoothScanReceiver" android:exported="false" />
     </application>
 
 </manifest>
