--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- App must only run on devices that have a bluetooth radio -->
-    <uses-feature android:name="android.hardware.bluetooth" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.bluetooth"
+        android:required="true" />
 
     <application
         android:name=".App"
@@ -60,8 +63,15 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <service android:name=".SerialService" />
-        <receiver android:name=".receivers.BluetoothStateReceiver" android:exported="false" />
-        <receiver android:name=".receivers.BluetoothScanReceiver" android:exported="false" />
+
+        <receiver
+            android:name=".receivers.BluetoothStateReceiver"
+            android:exported="false"
+            tools:ignore="Instantiatable" />
+        <receiver
+            android:name=".receivers.BluetoothScanReceiver"
+            android:exported="false"
+            tools:ignore="Instantiatable" />
     </application>
 
 </manifest>
