--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -7,11 +8,12 @@ android {
 
     defaultConfig {
         applicationId "de.eloc.eloc_control_panel"
-        minSdk 16
+        minSdk 19
         targetSdk 33
         versionCode 23
         versionName '4.62'
         versionNameSuffix 'AppBeta'
+        multiDexEnabled true
     }
 
     buildFeatures {
@@ -37,4 +39,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.4.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 }
