--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -8,11 +9,13 @@ android {
 
     defaultConfig {
         applicationId "de.eloc.eloc_control_panel"
-        minSdk 18
+        minSdk 19
         targetSdk 33
-        versionCode 23
-        versionName '4.62'
+        versionCode 25
+        versionName '4.65'
         versionNameSuffix 'AppBeta'
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildFeatures {
@@ -39,7 +42,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.work:work-runtime:2.8.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:3.4.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
