--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="de.eloc.eloc_control_panel">
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- Old BT permissions -->
     <uses-permission
         android:name="android.permission.BLUETOOTH"
