--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildToolsVersion '33.0.0'
     namespace 'de.eloc.eloc_control_panel'
 }
